# project-team09

./: .gitignore  LICENSE  README.md  pyproject.toml  tests.py
contact_book/: __main__.py  completion.py  storage.py  ui.py
contact_book/handlers/: contact_handlers.py  decorators.py  dispatcher.py  note_handlers.py
contact_book/models/: address_book.py  fields.py  note.py  notes_book.py  record.py
src/: main.py  storage.py
src/handlers/: __init__.py  contact_handlers.py  decorators.py  dispatcher.py  note_handlers.py
src/models/: __init__.py  address_book.py  fields.py  note.py  notes_book.py  record.py
